Add query by Specification instead of NativeQuery